--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -52,5 +52,22 @@
 
     <!-- JavaScripts -->
     {% include scripts.liquid %}
+
+    <!-- Default Statcounter code for Yanshuo_website https://yanshuoysl.github.io/ -->
+    <script type="text/javascript">
+    var sc_project=13121749; 
+    var sc_invisible=1; 
+    var sc_security="9c7289c6"; 
+    </script>
+    <script type="text/javascript"
+    src="https://www.statcounter.com/counter/counter.js"
+    async></script>
+    <noscript><div class="statcounter"><a title="Web Analytics
+    Made Easy - Statcounter" href="https://statcounter.com/"
+    target="_blank"><img class="statcounter"
+    src="https://c.statcounter.com/13121749/0/9c7289c6/1/"
+    alt="Web Analytics Made Easy - Statcounter"
+    referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
   </body>
 </html>
